kubernetes/ingress-livedemo2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livedemo2
  labels:
    name: livedemo2
spec:
  rules:
    - host: livedemo2.civo
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: civo-livedemo2
                port:
                  number: 80
